fix: prompt 结构 + 工具描述 + 缓存优化 + 行为修复
缓存与 prompt 结构：
- CoreMessageBuilder 集中消息排序：sys→tools→history→contextMsgs→compressedContext
- 所有动态上下文（ctxMsgs/projHint/压缩摘要）统一追加在对话历史之后
- 不再散落在 ForestConversationService/MessageEnrichmentService 多处插入
- insertContextMessages 等三处从硬编码 SYSTEM 后改为逐末追加
- getInternalTools 按名称排序，确保 tools schema 输出完全确定
- OpenAiModel 超时 120s→180s，缓解 DeepSeek 长推理超时

工具描述修复：
- bash 描述明确标注删除/移动/创建目录等 file_* 不支持的操作可用 bash
- file_write 修正描述：优先 file_edit 修 bug，避免全覆盖
- file_edit 改为"修改代码的首选工具"
- FileSecurityManager 移除 data/output/uploads 写目录限制，项目目录均可写

行为 Prompt 修复：
- ChatPrompts 强化"定位到问题后直接修复，做不要说"规则
- 「告诉我你在做什么，然后执行」改为「做，不要说，做了就是报告」
- 禁止完成后问"是否继续"，直接执行下一步

其他修复：
- deduplicateGenerations FAILED 版本不覆盖 COMPLETED 版本
- 删除 generate 方法中遗漏的 "好"，ChatPromptsTest 对应更新
- ChatInput.vue 发送后重置 textarea 高度
- ForestTree.vue reasoning 与 name 重复时不显示